--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ pydantic-settings==2.1.0
 langchain==0.1.0
 langchain-openai==0.0.5
 langchain-community==0.0.10
-openai==1.6.0
+openai>=1.10.0,<2.0.0
 
 # AWS
 boto3==1.29.7
