feat: Add few-shot examples step and update agent configuration
- Add ExamplesStep component for configuring few-shot examples (3 standard + up to 4 custom)
- Remove geo and audience fields from ProfileConfig model
- Integrate specialty and languages into system prompt
- Update LLM models list with latest OpenAI models (2025)
- Increase chat history from 5 to 50 messages
- Improve prompt formatting to avoid extra blank lines
- Add proper handling for empty examples arrays
- Add ID fallback generation for examples
- Update validation and error handling

--- a/configs/agent_configs/doctor_001.yaml
+++ b/configs/agent_configs/doctor_001.yaml
@@ -51,8 +51,6 @@ profile:
   clinic_display_name: "Elemental Clinic"
   specialty: "[Специализация врача]"
   languages: ["ru", "en"]           # язык определяется реальными компетенциями
-  geo: "Dubai"
-  audience: "new_patients_only"     # повторные пациенты только человек
 
 style:
   tone: "friendly_professional"
@@ -225,6 +223,7 @@ prompts:
     # образ: "врач в коммуникации", но без юридически значимых заявлений
     persona: |
       Ты общаешься от лица врача {doctor_display_name} из {clinic_display_name}.
+      Твоя специализация: {specialty}.
       Твой стиль — дружелюбный и профессиональный. Ты помогаешь с информацией и записью.
       Ты НЕ ведёшь медицинскую консультацию в чате.
 
@@ -322,6 +321,8 @@ monitoring:
   kpi_targets_mvp:
     booking_conversion_min: 0.10   # ≥10% обращений → запись
     share_without_human: 0.95      # ≥95% коммуникаций без участия человека
+
+
 
 
 
