fix: Improve Dockerfile comments for standalone mode structure

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -38,15 +38,19 @@ RUN adduser --system --uid 1001 nextjs
 
 # Copy built application
 # In standalone mode, Next.js creates a self-contained app in .next/standalone
-# The standalone directory already contains the necessary structure
-# We need to copy public files and ensure static files are in the right place
+# The standalone directory structure:
+#   .next/standalone/
+#     ├── server.js
+#     ├── .next/static/ (already included)
+#     └── node_modules/
+# We need to copy public files and static files separately for optimization
 COPY --from=builder /app/public ./public
 
-# Copy standalone output (contains server.js and node_modules)
+# Copy standalone output (contains server.js, node_modules, and basic structure)
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 
-# Copy static files to the correct location inside standalone
-# In standalone mode, static files should be at .next/static relative to server.js
+# Copy static files - they need to be at .next/static relative to server.js
+# The standalone directory may have an empty .next/static, so we overwrite it
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
