Оптимизация CI/CD: ускорение деплоя с 10 до 3-4 минут
- Добавлен Docker BuildKit для параллельной сборки
- Кэширование зависимостей (node_modules, pip) через GitHub Actions cache
- ECR layer caching для ускорения сборки Docker образов
- Создан объединенный workflow deploy.yml с умной логикой определения изменений
- Параллельный деплой при изменении обоих сервисов через matrix strategy
- Оптимизированы Dockerfile'ы для лучшего кэширования слоев
- Обновлена документация с описанием всех оптимизаций

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,10 @@ WORKDIR /app
 
 # Copy package files
 COPY package.json package-lock.json* ./
-RUN npm ci
+# Используем mount cache для npm (требует BuildKit)
+# Это ускорит установку зависимостей при повторных сборках
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci
 
 # Rebuild the source code only when needed
 FROM base AS builder
