--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -14,6 +14,8 @@ env:
   ECR_REPOSITORY: doctor-agent-backend
   ECS_SERVICE: doctor-agent-backend
   ECS_CLUSTER: doctor-agent-cluster
+  DOCKER_BUILDKIT: 1
+  BUILDKIT_PROGRESS: plain
 
 jobs:
   deploy:
@@ -35,6 +37,21 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Pull previous image for cache
+        id: pull-cache
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          docker pull $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest || echo "No previous image found, will build from scratch"
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -42,9 +59,13 @@ jobs:
           IMAGE_TAG: latest
         run: |
           cd backend
-          docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker build \
+            --platform linux/amd64 \
+            --cache-from $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest \
+            -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG \
+            .
+          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Force new ECS deployment
         run: |
