--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -23,6 +23,14 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NODE_ENV production
 
+# Build args for Next.js public variables (optional, fallback to runtime)
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_WS_URL
+
+# Set build-time environment variables (will be embedded in build)
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
+
 # Build Next.js
 RUN npm run build
 
