fix: удалены NEXT_PUBLIC переменные из build args и runtime для использования относительных URL

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -23,13 +23,12 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NODE_ENV production
 
-# Build args for Next.js public variables (optional, fallback to runtime)
-ARG NEXT_PUBLIC_API_URL
-ARG NEXT_PUBLIC_WS_URL
-
-# Set build-time environment variables (will be embedded in build)
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
-ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
+# Build args removed - using relative URLs in browser instead
+# This prevents Mixed Content issues by using the same protocol as the page
+# ARG NEXT_PUBLIC_API_URL
+# ARG NEXT_PUBLIC_WS_URL
+# ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+# ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
 
 # Build Next.js
 RUN npm run build
@@ -41,8 +40,8 @@ WORKDIR /app
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 
-# Install curl for health checks
-RUN apk add --no-cache curl
+# Install curl and wget for health checks
+RUN apk add --no-cache curl wget
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
