--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,9 +10,17 @@ langchain-openai==0.0.5
 langchain-community==0.0.10
 openai>=1.10.0,<2.0.0
 
-# AWS
-boto3==1.29.7
-botocore==1.32.7
+# PostgreSQL
+asyncpg>=0.29.0
+sqlalchemy[asyncio]>=2.0.0
+pgvector>=0.2.0
+
+# Encryption for secrets
+cryptography>=42.0.0
+
+# AWS (optional, for dynamodb backend)
+boto3>=1.29.0
+botocore>=1.32.0
 
 # WebSocket
 websockets==12.0
